Fix grid gap on front page

--- a/assets/sass/landing.sass
+++ b/assets/sass/landing.sass
@@ -2,10 +2,10 @@
     background-color: $primary
     color: $white
     padding: 10px 0 30px
-    text-align: left    
+    text-align: left
 
     +landscape
-        padding: 30px 0        
+        padding: 30px 0
         text-align: center
 
     h1
@@ -44,13 +44,11 @@
 .blurb
     display: grid
     padding: 0
-
-    display: grid
     grid-template-columns: 1fr
+    grid-gap: 15px
 
     +landscape
         grid-template-columns: 1fr 2fr
-        padding: 0 50px
 
     p
         padding: 3px 0
@@ -62,9 +60,3 @@
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
         margin: 0
         max-width: 100%
-
-.latest-update
-    background-color: $info
-    width: 100%
-
-
